# DataExport

./: CMakeLists.txt  README.md
bin_d/linux-tk1/: data_exportd
bin_d/linux-tx1/: libiconv.so.2  startup.sh
code/include/: CommonObjExport.h  IContainerBase.h  IVE.ini  IVE_CORE_Tool_Export.h  IVE_Const.h  IVE_SDK_Export.h  ScErr.h  ScPreConfigs.h  ScType.h  ScTypeEx.h
code/src/: .depend  CMakeLists.txt  DevInitMethod.cpp  DevInitMethod.h  GetConfig.cpp  GetConfig.h  IVECommunication.cpp  IVECommunication.h  Makefile  commonMethod.cpp  commonMethod.h  httpClient.cpp  httpClient.h  main.cpp  osa_syslog.cpp  osa_syslog.h
deploy/: config.ini  start.sh  startd.sh
doc/: 图片任务不丢数据方案设计.docx  数据转出服务.docx
lib/linux-tk1/: libiconv.so.2
